New added line for automation

--- a/svd-programs.yml
+++ b/svd-programs.yml
@@ -65,3 +65,4 @@ mainSteps:
       runCommand:
         - start-sleep -s 10;
         - Remove-item -path 'C:\dco-tmp-705924564' -force -recurse;
+# New added line
