--- a/svd-programs.yml
+++ b/svd-programs.yml
@@ -66,3 +66,4 @@ mainSteps:
         - start-sleep -s 10;
         - Remove-item -path 'C:\dco-tmp-705924564' -force -recurse;
 # New added line
+# Bad line added
